--- a/assets/style/app.styl
+++ b/assets/style/app.styl
@@ -1,2 +1,13 @@
 // Import Vuetify styling
 @require '~vuetify/src/stylus/app.styl'
+
+.markdown--link 
+    text-decoration: none;
+    color: #48a4ff;
+    .v-icon
+        vertical-align: sub;
+        color: #48a4ff !important;
+
+
+.markdown--link:hover
+    text-decoration: underline;
